# rasp-synth

./: .gitignore  CMakeLists.txt
src/: adsr.c  adsr.h  adsr_screen.c  adsr_screen.h  app.c  app.h  empty_stubs.h  event.h  main.c  midi_support.c  midi_support.h  queue.h  raspsynth.c  raspsynth.h  screen.c  screen.h  voice.c  voice.h
